
  HCAT-370 Create a HiveMetaStoreClient cache in hcatalog (amalakar via toffer) 

  HCAT-419 Java APIs for HCatalog DDL commands (avandana via toffer)

  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)
  
  HCAT-427 Document storage-based authorization (lefty via gates)

  IMPROVEMENTS
  HCAT-389 hcat_ping (script to check if HCatalog server is running/reachable) (mithun via khorgath)

  HCAT-432 Add findbugs to build (rohini via avandana)

  HCAT-424 Code cleanup of tabs (khorgath)

  HCAT-331 Update HCatalog to junit 4 (traviscrawford via khorgath)

  HCAT-414 More HCat e2e tests (khorgath via gates)

  HCAT-374 Add HCatBaseTest and one example usage (traviscrawford via gates)

  HCAT-390 Add e2e test for Hive with different file formats in different partitions (daijy via gates)

  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-445 Clover builds broken on trunk (rohinip via avandana)

  HCAT-477 Drop table API in webhcat client does not respect the "ifExists" parameter. (avandana)

  HCAT-471 Test HCat_ShowDes_1[1-3] fails (vikram.dixit via gates)

  HCAT-451 Partitions are created even when Jobs are aborted (avandana)

  HCAT-436 JSON SerDe column misnaming on CTAS (khorgath via gates)

  HCAT-449 HCatLoader is mistakenly identifying Configuration parameters to store (cdrome via traviscrawford)

  HCAT-452 HCat_Drop_Table_3 does not get initialized properly (cdrome via toffer)  

  HCAT-448 HCatStorer performance is 4x slower in HCat 0.4 than HCat 0.2 (rajesh.balamohan via khorgath)

  HCAT-437 HCatSchema's equals() implementation uses hashcode obtained from toString() method. (avandana)
